# Tyopaikka-tutka

./: .env.example  .gitignore  CHANGELOG.md  README.md  domains.csv  pyproject.toml  repo_export.txt  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
config/: industry_groups.yaml  profiles.yaml
docs/: MILESTONE_0_8_0.md  OUTPUT_CONTRACT.md  PLACES_RETENTION.md  TOMORROW_PLAN.md  WORKFLOW.md
research/: work_commute_scanner_original.py
schemas/: hiring_signal_output.schema.json
scripts/: hiring_signal_ollama.py  pipeline.py  places_details.py
src/apprscan/: __init__.py  checks.py  cli.py  distance.py  domains_discovery.py  effective_view.py  evaluate_hiring_signal.py  filters.py  filters_view.py  geocode.py  hiring_scan.py  industry.py  inspector.py  jobs.py  jobs_view.py  normalize.py  watch.py  (+8 more)
tests/: test_analytics_summaries.py  test_cli.py  test_cli_run.py  test_crawl_stats_errors.py  test_dedup.py  test_degraded_fixtures.py  test_distance.py  test_domains_command.py  test_domains_discovery.py  test_evidence_downgrade.py  test_filters.py  test_filters_view.py  test_generic_html_extractor.py  test_geocode.py  test_inspector.py  test_jobs.py  test_jobs_map.py  test_jobs_view.py  test_normalize.py  test_output_contract.py  test_pipeline_diff.py  test_prh_client.py  test_profiles.py  test_rate_limit.py  test_report.py  test_resolver_ladder.py  test_robots.py  test_robots_matrix.py  test_scoring.py  test_server_companion.py  test_stations.py  test_storage.py  test_watch.py
tools/: check_version.py  evaluate_hiring_signal.py
(+26 files in other folders)
