[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apprenticeship-employer-scanner"
version = "0.1.0"
description = "CLI-työkalu oppisopimuskelpoisten työnantajien shortlistaukseen (PRH/YTJ + geokoodaus)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Oppisopimushaku" }]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "geopy>=2.4.0",
    "folium>=0.15.0",
    "openpyxl>=3.1.0",
    "tqdm>=4.66.0",
    "unidecode>=1.3.8",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "responses>=0.25.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
apprscan = "apprscan.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
